--- a/assets/templates/restaurants/restaurant-add-menu.html
+++ b/assets/templates/restaurants/restaurant-add-menu.html
@@ -121,7 +121,7 @@
                                     <div class="row g-3">
                                         <div class="col-md-12">
                                             <div class="form-floating">
-                                                <select class="form-select" name="category">
+                                                <select class="form-select" name="category" required>
                                                     
                                                     <option selected>Category</option>
                                                     <option>Booths</option>
@@ -136,19 +136,19 @@
                                         </div>
                                         <div class="col-md-12">
                                             <div class="form-floating">
-                                                <input name="price"  class="form-control" placeholder="Price">
+                                                <input name="price"  class="form-control" placeholder="Price" required>
                                                 <label for="tel">Price 1 Table</label>
                                             </div>
                                         </div>
                                         <div class="col-md-12">
                                             <div class="form-floating">
-                                                <input name="tables"  class="form-control" placeholder="Total Tables">
+                                                <input name="tables"  class="form-control" placeholder="Total Tables" required>
                                                 <label for="tel">Total Tables</label>
                                             </div>
                                         </div>
                                         <div class="col-md-12">
                                             <div class="form-floating">
-                                                <select class="form-select" name="members" id="select1">
+                                                <select class="form-select" name="members" id="select1" required>
                                                     <option value="0">No of Members</option>
                                                     <option >0-2</option>
                                                     <option >2-4</option>
