--- a/assets/templates/customer/customer-login.html
+++ b/assets/templates/customer/customer-login.html
@@ -69,7 +69,7 @@
                         <a href="{% url 'restro_login' %}" class="nav-item nav-link">Restaurants</a>
                         <a href="{% url 'user_login' %}" class="nav-item nav-link active">Customers</a>
 
-                        <a href="/Customers/contact.html" class="nav-item nav-link">Contact</a>
+                        <a href="{% url 'contact' %}" class="nav-item nav-link">Contact</a>
                     </div>
                     <a href="" class="btn btn-primary py-2 px-4">Book A Table</a>
                 </div>
@@ -127,7 +127,7 @@
 
                             <div class="col-md-12 px-5">
                                 <div class="form-floating">
-                                    <input type="Password" name="password" class="form-control" id="Password" placeholder="Password">
+                                    <input type="Password" name="password" class="form-control" id="Password" placeholder="Password" required>
                                     <label for="Password">password</label>
                                 </div>
                             </div>
